# double-shot-of-duck-demos

./: README.md
demos/conflicts/: client-1.sql  client-2.sql  server.sql
demos/quack-complex/: README.md  animal-embeddings.json  camera.py  cats.sql  client.sql  ducks.sql  project.yaml  pyproject.toml  router.py  server.sql
demos/quack-complex/frames/: README.md
demos/quack-complex/web-client/: main.py
demos/quack-complex/web_client/: main.py
demos/quack-complex/web_client/templates/: animal.html
demos/quack-simple/: README.md  client.sql  server.sql
