[project]
name = "duck-vectors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pytz",
  "loguru",
  "duckdb ~= 1.5.2",
  "pillow",
  "torch",
  "transformers < 5",  #FIXME
  "torchvision ~= 0.27.0",
  "fastapi[standard]",
  "jinja2",
]
